# llm-limerick

./: .pre-commit-config.yaml  .secrets.baseline  .venv  README.md  pyproject.toml
.github/workflows/: constraints.txt
docs/: project_specific_setup.md  using_poetry.md
llm_limerick/: capabilities_four.py  capabilities_one.py  capabilities_three.py  capabilities_two.py
tests/: test_llm_limerick.py
