###########
# 📜 Poetry
###########
[tool.poetry]
name = "llm_limerick"
version = "0.1.0"
description = "Conference talk about language models"
authors = ["Jamie Coombes <jamie@coefficient.ai>"]
license = "UNLICENSED"
classifiers = ["Private :: Do Not Upload"]
packages = [
  { include = "llm_limerick", from = "llm_limerick" },
  # Add more packages here, e.g.
  # { include = "module_name", from = "llm_limerick" },
]

[tool.poetry.dependencies]
python = "^3.10.6"
# Everything below here is alphabetically sorted
openai = "^0.27.2"
langchain = "^0.0.121"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
black = "^22.8.0"
detect-secrets = "1.2.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.3.0"
flake8-fixme = "^1.1.1"
flake8-implicit-str-concat = "^0.3.0"
flake8-no-pep420 = "^2.3.0"
flake8-print = "^5.0.0"
flake8-return = "^1.1.3"
ipdb = "^0.13.9"
isort = "^5.10.1"
jupyter-black = "^0.3.1"
pip-audit = "^2.4.4"
poetryup = "^0.8.2"
pre-commit = "^2.20.0"
pylint = "^2.15.2"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
known_first_party = ["llm_limerick"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
add_imports = "from __future__ import annotations"

[tool.pylint.MASTER]
ignore-paths = [".git"]
load-plugins = []

[tool.pylint."MESSAGES CONTROL"]
enable = "all"
max-module-lines = 2000
max-line-length = 100
max-locals = 50
min-similarity-lines = 150
max-statements = 89
max-args = 22
max-branches = 17
# good-names = []
# disable = []
logging-format-style = "new"

##############
# 📣 Towncrier
##############

